--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -1,3 +1,10 @@
 .order-text{
     text-align: center;
 }
+.order-containers{
+    position: sticky;
+    top: 0;
+}
+.cart-info{
+    padding: 30px 20px;
+}
