--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,19 +1,19 @@
-.header{
-    height: 80px;
-    background-color: #1C2B35; 
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding-left: 30px;
-    padding-right: 30px;
+.header {
+  height: 80px;
+  background-color: #1c2b35;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-left: 30px;
+  padding-right: 30px;
 }
 .header a {
-    text-decoration: none;
-    padding: 10px;
-    color: white;
-    margin-right: 20px;
-    font-weight: bold;
+  text-decoration: none;
+  padding: 10px;
+  color: white;
+  margin-right: 20px;
+  font-weight: bold;
 }
-.header a:hover{
-    color: orangered;
+.header a:hover {
+  color: orangered;
 }
